# crowdchoir

./: CURRENT_ARCHITECTURE.md  Cargo.toml  ChordFinder.py  ChordMatrix.py  HarmonyBridge.py  MusicController.py  PLAN.md  README.md  RUST_MIGRATION_PLAN.md  ScalesMatrix.py  app.py  requirements.txt
crowdchoir-server/: Cargo.toml
crowdchoir-server/src/: main.rs
deploy/captive-portal/: README.md  crowdchoir.service  dnsmasq.conf  hostapd.conf  setup.sh
src/: chord_finder.rs  events.rs  lib.rs  main.rs  midi.rs  music_controller.rs  server.rs  state.rs
static/: RTPChordMatrix.js  RTPMusicController.js  RTPScaleMatrix.js  Synth.js  UserInteraction.js  WebSocketHandler.js  main.js  styles.css
static/data/: chords.json  scales.json
templates/: conductor.html  index.html
